Updated readme to reflect parallel testing changes.